<?xml version="1.0"?>
<package format="3">
  <name>sr32_led_cpp</name>
  <version>0.0.1</version>
  <description>SR32 LED controller scaffold for SIL CAN integration</description>

  <maintainer email="ndaribike.arley@gmail.com">Arley Ndaribike</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
